--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Superior Tab Mute",
-  "version": "1.5.7",
-  "description": "Advanced control over tab audio. Mute all tabs except the one you're focused on, the first one that made sound, or a specific tab you choose. Supports blacklist/whitelist modes, mute all/unmute all, and export/import lists.",
+  "version": "1.6.1",
+  "description": "Advanced control over sound in browser.",
   "permissions": [
     "tabs",
     "storage"
